feat: lab2 again

--- a/index.html
+++ b/index.html
@@ -1,71 +1,59 @@
 <!DOCTYPE HTML>
-<html lang="ru">
+<html lang="ru" xmlns="http://www.w3.org/1999/html">
 <head>
-<title>Приют "Любовь на четырех лапах""</title>
-<meta charset="UTF-8">
+    <title>Приют "Любовь на четырех лапах""</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="CSS/styles.css"/>
 </head>
-<body style="background-color:#FFFFF0;">
+<body>
 <header>
-<h1 align="center" style="font-family:verdana; height:35px; font-size:150%; background-color:#FFDEAD">Любовь на четырех лапах</h1>
-<section>
-<blockquote style="float:right; font-family:verdana">
-<p><i>Дом без питомца - это только крыши над головой. Но дом с питомцем - это настоящий дом, полный любви и тепла.</i></p>
-</blockquote>
-</section>
-<section style="float:left; width:200px; height:750px; font-family:verdana; background-color:#FFDEAD">
-<aside><h2 align="center">Меню</h2>
-<nav>
-<ul>
-<li>Про приют</li>
-<li>Песики и котики</li>
-<li>Помочь приюту</li>
-<li>Контакты</li>
-</ul>
-</nav>
-</aside>
-</section>
+    <h1 class="name" >Любовь на четырех лапах</h1>
+    <section>
+        <blockquote>
+            <p><i>Дом без питомца - это только крыши над головой. Но дом с питомцем - это настоящий дом, полный любви и
+                тепла.</i></p>
+        </blockquote>
+    </section>
+    <section class="menu">
+        <aside><h2>Меню</h2>
+            <nav>
+                <ul>
+                    <li>Про приют</li>
+                    <li>Песики и котики</li>
+                    <li>Помочь приюту</li>
+                    <li>Контакты</li>
+                </ul>
+            </nav>
+        </aside>
+    </section>
 </header>
 <main>
-<section>
-<aside style="float:right; width:200px; height:700px">
-<pre align="left">
-┈┈┏╮┈╭┓
-┈┈┃┗━┛┃
-┈┈┃╯▃╰┃
-┏╮┃╰┻╯┃╭┓
-┃┗┻━━━┻┛┃
-┃┳▅╮┈╭▅┳┃
-┃╰┈╯▃╰┈╯┃
-┃┈┈╰┻╯┈┈┃
-╰┳┈┈┈┈┈┳╯
-┈┃┈┈┈┈┈┃
-┈┃┈┈┈┈┈┃
-┈┃┈┣━┫┈┃
-╭╯┈┃┈┃┈╰╮
-╰┻┻╯┈╰┻┻╯
-</pre>
-</aside>
-</section>
-<section style="width:700px"">
-<article style="font-family:verdana; margin-top: 20%">
-<h3>Не только людям нужен дом</h3>
-<p>Мы предлагаем дать шанс маленьким и милым щенятам и котятам с невероятно широким сердцем. Они будут любить вас больше, чем кого-либо в этом мире, ведь для вас они - страница из жизни, но вы для них - целая жизнь!</p>
-</article>
-</section>
-<section style="font-family:verdana; height:100px; width:700px"">
-<ins><strong> Кнопка для перехода к катологу</strong></ins>
-</section>
-<section style="background-color:#deb887; width:700px">
-<p><pre>
-<code>
-if (cat's home == null)<br>
+    <section>
+        <aside class="dogPhoto">
+            <img src="dog1.jpeg" height="450" width="400">
+        </aside></section>
+    <section class="box">
+        <section>
+            <article class="mainText">
+                <h3>Не только людям нужен дом</h3>
+                <p>Мы предлагаем дать шанс маленьким и милым щенятам и котятам с невероятно широким сердцем. Они будут
+                    любить вас больше, чем кого-либо в этом мире, ведь для вас они - страница из жизни, но вы для них -
+                    целая жизнь!</p>
+            </article>
+        </section>
+        <section id="catalog">
+            <ins><strong> Кнопка для перехода к катологу</strong></ins>
+        </section>
+        <p><pre>
+        <code>
+if (cat's home == null)
     take it with you && show some love! <3
-</code>
-</pre></p>
-</section>
+        </code>
+        </pre></p>
+    </section>
 </main>
-<footer style="padding: 10px 20px">
-<p><small>Saint-Petersburg. 2023.</small></p>
+<footer>
+    <p><small>Saint-Petersburg. 2023.</small></p>
 </footer>
 </body>
 </html>
