--- a/index.html
+++ b/index.html
@@ -8,49 +8,79 @@
 <body>
 <header>
     <h1 class="name" >Любовь на четырех лапах</h1>
-    <section>
-        <blockquote>
-            <p><i>Дом без питомца - это только крыши над головой. Но дом с питомцем - это настоящий дом, полный любви и
-                тепла.</i></p>
-        </blockquote>
-    </section>
-    <section class="menu">
-        <aside><h2>Меню</h2>
-            <nav>
-                <ul>
-                    <li>Про приют</li>
-                    <li>Песики и котики</li>
-                    <li>Помочь приюту</li>
-                    <li>Контакты</li>
-                </ul>
-            </nav>
-        </aside>
-    </section>
 </header>
-<main>
-    <section>
-        <aside class="dogPhoto">
-            <img src="dog1.jpeg" height="450" width="400">
-        </aside></section>
-    <section class="box">
+    <main>
+        <div id="container">
+        <section class="menu">
+            <aside><h2>Меню</h2>
+                <nav>
+                    <p>Про приют</p>
+                    <p>Песики и котики</p>
+                    <p>Помочь приюту</p>
+                    <p></p>Контакты</p>
+                </nav>
+            </aside>
+        </section>
+        <section class="box">
+            <section>
+                <article class="main-text">
+                    <h3>Не только людям нужен дом</h3>
+                    <p>Мы предлагаем дать шанс маленьким и милым щенятам и котятам с невероятно широким сердцем. Они будут
+                        любить вас больше, чем кого-либо в этом мире, ведь для вас они - страница из жизни, но вы для них -
+                        целая жизнь!</p>
+                </article>
+            </section>
+            <section id="catalog">
+                <ins><strong> Кнопка для перехода к катологу</strong></ins>
+            </section>
+            <p><pre>
+            <code>
+    if (cat's home == null)
+        take it with you && show some love! <3
+            </code>
+            </pre></p>
+            <div class="grid-container">
+                <div class="heading pet-name">Кличка</div>
+                <div class="heading breed">Порода</div>
+                <div class="heading gender">Пол</div>
+                <div class="heading age">Возраст</div>
+                <div class="heading pet-color">Цвет</div>
+                <div class="heading additional-info">Дополнительная информация</div>
+
+                <div class="modify odd-cell11">Роки</div>
+                <div class="odd-cell12">Бульдог</div>
+                <div class="modify odd-cell13">Мальчик</div>
+                <div class="odd-cell14">3</div>
+                <div class="modify odd-cell15">Коричневый</div>
+                <div class="odd-cell16">Необходим надзор врача</div>
+
+                <div class="even-cell21">Луна</div>
+                <div class="modify even-cell22">Сиамская</div>
+                <div class="even-cell23">Девочка</div>
+                <div class="modify even-cell24">1</div>
+                <div class="even-cell25">Серый</div>
+                <div class="modify even-cell26">Ищет тихий дом</div>
+
+                <div class="modify odd-cell31">Макс</div>
+                <div class="odd-cell32">Лабладор</div>
+                <div class="modify odd-cell33">Мальчик</div>
+                <div class="odd-cell34">2</div>
+                <div class="modify odd-cell35">Черный</div>
+                <div class="odd-cell36">Дружелюбный и игривый</div>
+
+                <div class="even-cell41">Грампи</div>
+                <div class="modify even-cell42">Мопс</div>
+                <div class="even-cell43">Девочка</div>
+                <div class="modify even-cell44">1</div>
+                <div class="even-cell45">Белый</div>
+                <div class="modify even-cell46">Любит объятия</div>
+            </div>
+        </section>
         <section>
-            <article class="mainText">
-                <h3>Не только людям нужен дом</h3>
-                <p>Мы предлагаем дать шанс маленьким и милым щенятам и котятам с невероятно широким сердцем. Они будут
-                    любить вас больше, чем кого-либо в этом мире, ведь для вас они - страница из жизни, но вы для них -
-                    целая жизнь!</p>
-            </article>
-        </section>
-        <section id="catalog">
-            <ins><strong> Кнопка для перехода к катологу</strong></ins>
-        </section>
-        <p><pre>
-        <code>
-if (cat's home == null)
-    take it with you && show some love! <3
-        </code>
-        </pre></p>
-    </section>
+            <aside class="dog-photo">
+                <img src="dog1.jpeg" height="450" width="400">
+            </aside></section>
+        </div>
 </main>
 <footer>
     <p><small>Saint-Petersburg. 2023.</small></p>
