--- a/about.html
+++ b/about.html
@@ -1,22 +1,23 @@
 <!DOCTYPE HTML>
 <html lang="ru" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Про приют</title>
+    <title>Приют "Любовь на четырех лапах"</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="CSS/styles.css"/>
     <script src="JS/loading-time.js"></script>
+    <script type="text/javascript" src="JS/active-menu.js"></script>
 </head>
 <body>
 <header>
     <h1 class="name">Любовь на четырех лапах</h1>
 </header>
-<main>
-    <div id="container">
-        <section class="menu">
+<div>
+    <div class="wrapper">
+        <section class="menu" id="menu-act">
             <aside><h2>Меню</h2>
                 <nav>
-                    <p><a class="nav-item" href="index.html">Главная страница</a></p>
-                    <p><a class="nav-item active" href="about.html">Про приют</a></p>
+                    <p><a class="nav-item active" href="index.html">Главная страница</a></p>
+                    <p><a class="nav-item" href="about.html">Про приют</a></p>
                     <p><a class="nav-item" href="selection.html">Песики и котики</a></p>
                     <p><a class="nav-item" href="about.html">Помочь приюту</a></p>
                     <p><a class="nav-item" href="contacts.html">Контакты</a></p>
@@ -81,13 +82,13 @@
         <section>
             <aside class="dog-photo">
                 <img src="dog1.jpeg" height="450" width="400">
-            </aside></section>
+            </aside>
+        </section>
     </div>
-</main>
+</div>
 <footer>
     <p><small>Saint-Petersburg. 2023.</small></p>
 </footer>
-<script type="text/javascript" src="JS/active-menu.js"></script>
 </body>
 </html>
 
