--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="CSS/styles.css"/>
     <script src="JS/loading-time.js"></script>
+    <script type="text/javascript" src="JS/active-menu.js"></script>
 </head>
 <body>
     <header>
         <h1 class="name">Любовь на четырех лапах</h1>
     </header>
-    <main>
-        <div id="container">
+    <div>
+        <div class="wrapper">
             <section class="menu" id="menu-act">
                 <aside><h2>Меню</h2>
                     <nav>
@@ -84,11 +85,10 @@
                 </aside>
             </section>
         </div>
-    </main>
+    </div>
     <footer>
         <p><small>Saint-Petersburg. 2023.</small></p>
     </footer>
-    <script type="text/javascript" src="JS/active-menu.js"></script>
 </body>
 </html>
 
