fix: adaptation again

--- a/about.html
+++ b/about.html
@@ -16,8 +16,8 @@
         <section class="menu" id="menu-act">
             <aside><h2>Меню</h2>
                 <nav>
-                    <p><a class="nav-item active" href="index.html">Главная страница</a></p>
-                    <p><a class="nav-item" href="about.html">Про приют</a></p>
+                    <p><a class="nav-item" href="index.html">Главная страница</a></p>
+                    <p><a class="nav-item active" href="about.html">Про приют</a></p>
                     <p><a class="nav-item" href="selection.html">Песики и котики</a></p>
                     <p><a class="nav-item" href="about.html">Помочь приюту</a></p>
                     <p><a class="nav-item" href="contacts.html">Контакты</a></p>
