--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </section>
             <section>
                 <aside class="dog-photo">
-                    <img src="dog1.jpeg" height="450" width="400">
+                    <img src="dog1.jpeg">
                 </aside>
             </section>
         </div>
