--- a/about.html
+++ b/about.html
@@ -1,94 +1,43 @@
 <!DOCTYPE HTML>
 <html lang="ru" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 <head>
-    <title>Приют "Любовь на четырех лапах"</title>
+    <title>Про приют</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="CSS/styles.css"/>
-    <script src="JS/loading-time.js"></script>
-    <script type="text/javascript" src="JS/active-menu.js"></script>
+    <link rel="stylesheet" href="CSS/styles_about.css"/>
 </head>
 <body>
-<header>
-    <h1 class="name">Любовь на четырех лапах</h1>
-</header>
-<div>
+    <header>
+        <div class="name">
+            <h1 class="main-name">Любовь на четырех лапах</h1>
+            <blockquote class="description">
+                <p>Приют для животных в Санкт-Петербурге</p>
+            </blockquote>
+        </div>
+        <nav class="menu">
+            <p><a class="nav-item" href="index.html">Главная страница</a></p>
+            <p><a class="nav-item active" href="about.html">Про приют</a></p>
+            <p><a class="nav-item" href="catalog.html">Песики и котики</a></p>
+            <p><a class="nav-item" href="help.html">Помочь приюту</a></p>
+            <p><a class="nav-item" href="contacts.html">Контакты</a></p>
+        </nav>
+    </header>
     <div class="wrapper">
-        <section class="menu" id="menu-act">
-            <aside><h2>Меню</h2>
-                <nav>
-                    <p><a class="nav-item" href="index.html">Главная страница</a></p>
-                    <p><a class="nav-item active" href="about.html">Про приют</a></p>
-                    <p><a class="nav-item" href="selection.html">Песики и котики</a></p>
-                    <p><a class="nav-item" href="about.html">Помочь приюту</a></p>
-                    <p><a class="nav-item" href="contacts.html">Контакты</a></p>
-                </nav>
-            </aside>
-        </section>
-        <section class="box">
-            <section>
-                <article class="main-text">
-                    <h3>Не только людям нужен дом</h3>
-                    <p>Мы предлагаем дать шанс маленьким и милым щенятам и котятам с невероятно широким сердцем. Они будут
-                        любить вас больше, чем кого-либо в этом мире, ведь для вас они - страница из жизни, но вы для них -
-                        целая жизнь!</p>
-                </article>
-            </section>
-            <section id="catalog">
-                <ins><strong><a href="selection.html">Кнопка для перехода к катологу</a></strong></ins>
-            </section>
-            <p><pre>
-                <code>
-        if (cat's home == null)
-            take it with you && show some love! <3
-                </code>
-                </pre></p>
-            <div class="grid-container">
-                <div class="heading pet-name">Кличка</div>
-                <div class="heading breed">Порода</div>
-                <div class="heading gender">Пол</div>
-                <div class="heading age">Возраст</div>
-                <div class="heading pet-color">Цвет</div>
-                <div class="heading additional-info">Дополнительная информация</div>
-
-                <div class="modify odd-cell11">Роки</div>
-                <div class="odd-cell12">Бульдог</div>
-                <div class="modify odd-cell13">Мальчик</div>
-                <div class="odd-cell14">3</div>
-                <div class="modify odd-cell15">Коричневый</div>
-                <div class="odd-cell16">Необходим надзор врача</div>
-
-                <div class="even-cell21">Луна</div>
-                <div class="modify even-cell22">Сиамская</div>
-                <div class="even-cell23">Девочка</div>
-                <div class="modify even-cell24">1</div>
-                <div class="even-cell25">Серый</div>
-                <div class="modify even-cell26">Ищет тихий дом</div>
-
-                <div class="modify odd-cell31">Макс</div>
-                <div class="odd-cell32">Лабладор</div>
-                <div class="modify odd-cell33">Мальчик</div>
-                <div class="odd-cell34">2</div>
-                <div class="modify odd-cell35">Черный</div>
-                <div class="odd-cell36">Дружелюбный и игривый</div>
-
-                <div class="even-cell41">Грампи</div>
-                <div class="modify even-cell42">Мопс</div>
-                <div class="even-cell43">Девочка</div>
-                <div class="modify even-cell44">1</div>
-                <div class="even-cell45">Белый</div>
-                <div class="modify even-cell46">Любит объятия</div>
-            </div>
-        </section>
-        <section>
-            <aside class="dog-photo">
-                <img src="dog1.jpeg" height="450" width="400">
-            </aside>
-        </section>
+        <div class="dog-cat-photo">
+            <img src="data/dog_cat.png" alt="">
+        </div>
+        <div class="content">
+            <article>
+                <p id="header-text">Про приют "Любовь на четырех лапах"</p>
+                <p class="main-text">На данный момент в нашем приюте находятся 121 собака и 342 кота. По статистике только 20% из них найдут семью. Остальные
+                    продолжат жить с нами и будут ждать счастливого шанса стать любимыми.</p>
+                <p class="main-text">Мы заполняем миски наших подопечных лучшей едой и стараемся убидиться, что они
+                    не заболели, чувствуют себя комфортно и хорошо. Нас поддреживают 87 волонтеров и 28 работников
+                    с различным уровнем навыков. Около 12% животных в конечном итоге забирает персонал приюта.
+                    Заботясь о
+                    животных, они привязываются к ним и вряд ли бы смогли оставить их одинокими.</p>
+            </article>
+        </div>
     </div>
-</div>
-<footer>
-    <p><small>Saint-Petersburg. 2023.</small></p>
-</footer>
 </body>
 </html>
 
