--- a/help.html
+++ b/help.html
@@ -1,10 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">>
 <head>
+    <title>Приют "Любовь на четырех лапах"</title>
     <meta charset="UTF-8">
-    <title>Помощь</title>
+    <link rel="stylesheet" href="CSS/styles_main_page.css"/>
+    <script type="text/javascript" src="JS/active-menu.js"></script>
 </head>
 <body>
+<header></header>
+<div>
+    <section class="menu" id="menu-act">
+        <aside><h2>Меню</h2>
+            <nav>
+                <p><a class="nav-item active" href="index.html">Главная страница</a></p>
+                <p><a class="nav-item" href="about.html">Про приют</a></p>
+                <p><a class="nav-item" href="catalog.html">Песики и котики</a></p>
+                <p><a class="nav-item" href="help.html">Помочь приюту</a></p>
+                <p><a class="nav-item" href="contacts.html">Контакты</a></p>
+            </nav>
+        </aside>
+    </section>
+</div>
 
+<main>
+    <h1>Конструктор таблицы</h1>
+    <form id="tableForm">
+        <label for="scheduleType">Тип расписания:</label>
+        <select id="scheduleType" name="scheduleType">
+            <option value="5">5-дневная неделя</option>
+            <option value="6">6-дневная неделя</option>
+        </select>
+
+        <label for="maxLessons">Максимальное количество занятий:</label>
+        <input type="number" id="maxLessons" name="maxLessons" min="1" max="10">
+
+        <label for="language">Язык таблицы:</label>
+        <input type="text" id="language" name="language">
+
+        <button type="submit">Создать таблицу</button>
+    </form>
+
+    <div id="tableContainer"></div>
+</main>
 </body>
 </html>
+
