fix: stylization for arrows in catalog

--- a/catalog.html
+++ b/catalog.html
@@ -17,16 +17,30 @@
         <nav class="menu">
             <p><a class="nav-item" href="index.html">Главная страница</a></p>
             <p><a class="nav-item" href="about.html">Про приют</a></p>
-            <p><a class="nav-item active" href="catalog.html">Песики и котzxzz````ики</a></p>
+            <p><a class="nav-item active" href="catalog.html">Песики и котики</a></p>
             <p><a class="nav-item" href="help.html">Помочь приюту</a></p>
             <p><a class="nav-item" href="contacts.html">Контакты</a></p>
         </nav>
     </header>
     <div class="wrapper">
         <h2 class="heading">Наши друзья, ищущие дом</h2>
-        <section>
-            <div class="pets-grid-slider"></div>
-        </section>
+        <div class="slider-wrapper">
+            <ul>
+                <li class="prev-button-arrow">
+                    <div class="arrow">
+                        <img class="arrow-photo" src="data/prev_arrow.png" alt="">
+                    </div>
+                </li>
+            </ul>
+            <div class="pets-slider"></div>
+            <ul>
+                <li class="next-button-arrow">
+                    <div class="arrow">
+                        <img class="arrow-photo" src="data/next_arrow.png" alt="">
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
